--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 						<div class="about-desc">
 							<div class="owl-carousel3">
 								<div class="item">
-									<h2><span>Noah</span><span>Henderson</span></h2>
+									<h2><span>Светлана</span><span>Белова</span></h2>
 								</div>
 								<div class="item">
-									<h2><span>I'm</span><span>A Designer</span></h2>
+									<h2><span>Я</span><span>UX/UI-дизайнер</span></h2>
 								</div>
 							</div>
 							<div class="desc">
